--- a/index.html
+++ b/index.html
@@ -9,8 +9,30 @@
     ------------------>
     <link rel="stylesheet" href="/styles/style.css">
     <title>Leader-Board-Website-Teamplate</title>
+    <!----------------
+        Favicon 
+    ------------------>
+    <link rel="shortcut icon" href="images/icons/star.png" type="image/x-icon">
 </head>
 <body>
-    
+    <!------------
+     navigation Menu 
+    -------------->
+    <nav>
+    <div class="container flex justify-between align-center">
+        <div class="logo flex align-center">
+            <img src="images/icons/logo.png" alt="">
+            <span>Idea</span>
+        </div>
+        <div class="main-menu flex align-center">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Works</a>
+            <div class="profile">
+                <img src="images/icons/profile.png" alt="">
+            </div>
+        </div>
+    </div>
+    </nav>
 </body>
 </html>
