Top Players done

--- a/index.html
+++ b/index.html
@@ -34,5 +34,42 @@
         </div>
     </div>
     </nav>
+    <section id="top">
+        <div class="container">
+            <div class="top-players">
+                <h1 class="Section-title">Top Players</h1>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <span>John Smith</span>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <span>John Smith</span>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <span>John Smith</span>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <span>John Smith</span>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <span>John Smith</span>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <span>John Smith</span>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!--------------------------
+                 Header Section-Top Blog 
+            ---------------------------->
+        </div>
+    </section>
 </body>
 </html>
