--- a/index.html
+++ b/index.html
@@ -69,6 +69,47 @@
             <!--------------------------
                  Header Section-Top Blog 
             ---------------------------->
+            <div class="top-blogs">
+                <h1 class="Section-title">Top Blog</h1>
+                <div class="blogs">
+                    <div class="blog flex">
+                        <div class="blog-thum">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3>13 of My Favorite UI/UX Goodies</h3>
+                            <span>By <a href="#">Danny Sapio</a></span>
+                        </div>
+                    </div>
+                    <div class="blog flex">
+                        <div class="blog-thum">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3>UI cheat sheet: list vs grids</h3>
+                            <span>By <a href="#">Tess Gadd</a></span>
+                        </div>
+                    </div>
+                    <div class="blog flex">
+                        <div class="blog-thum">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3>7 typography tips for interface design</h3>
+                            <span>By <a href="#">Hazrat Ali</a></span>
+                        </div>
+                    </div>
+                    <div class="blog flex">
+                        <div class="blog-thum">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3>Your logo is copied</h3>
+                            <span>By <a href="#">Mustakim Billah</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
