--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!----------------
         styles 
     ------------------>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Leader-Board-Website-Teamplate</title>
     <!----------------
         Favicon 
