--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!---------------
+         Font Awesome
+    -------------- -->
+    <script src="https://kit.fontawesome.com/39245b0822.js" crossorigin="anonymous"></script>
     <!----------------
         styles 
     ------------------>
@@ -34,6 +38,7 @@
         </div>
     </div>
     </nav>
+<main>
     <section id="top">
         <div class="container">
             <div class="top-players">
@@ -112,5 +117,85 @@
             </div>
         </div>
     </section>
+    <!------------
+     Latest Courses 
+    -------------->
+    <section id="latestCourses">
+        <div class="container">
+            <h1 class="Section-title">Latest Course</h1>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-thum">
+                        <img src="images/courses/course-1.png" alt="">
+                        <div class="course-details">
+                            <h3>React - The Complete Guide 2021</h3>
+                            <span>Reed krakoff</span>
+                        </div>
+                        <div class="course-additional flex justify-between align-center">
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>5.0</span>
+                            </div>
+                            <div class="course-duration flex align-center">
+                                <i class="far fa-clock"></i>
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-thum">
+                        <img src="images/courses/course-2.png" alt="">
+                        <div class="course-details">
+                            <h3>Powerpoint 2020 - Master Powerpoint Course</h3>
+                            <span>Reed krakoff</span>
+                        </div>
+                        <div class="course-additional flex justify-between align-center">
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>5.0</span>
+                            </div>
+                            <div class="course-duration flex align-center">
+                                <i class="far fa-clock"></i>
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-thum">
+                        <img src="images/courses/course-3.png" alt="">
+                        <div class="course-details">
+                            <h3>The Complate JavaScirp Course 2021</h3>
+                            <span>Reed krakoff</span>
+                        </div>
+                        <div class="course-additional flex justify-between align-center">
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>5.0</span>
+                            </div>
+                            <div class="course-duration flex align-center">
+                                <i class="far fa-clock"></i>
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
