--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <span>5.0</span>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span>4.5</span>
                             </div>
                             <div class="course-duration flex align-center">
                                 <i class="far fa-clock"></i>
@@ -183,8 +183,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <span>5.0</span>
+                                <i class="far fa-star"></i>
+                                <span>4.0</span>
                             </div>
                             <div class="course-duration flex align-center">
                                 <i class="far fa-clock"></i>
